# documentation

./: .gitignore  .readthedocs.yaml  L4_Cheatsheet.docx  README.md  conf.py  index.rst  pyproject.toml  requirements.txt
csv_examples/: sum_phi_x.csv
docs/: L4manual-examples.rst  about-and-contact.rst  acknowledgements.rst  advanced-explanations.rst  advanced-installation-L4spreadsheet.rst  advanced-installation-googlesheets.rst  advanced-installation-webtool.rst  advanced-security.rst  beginner-tutorial-script.org  beginner-tutorial-script.rst  developers-explanations.rst  developers-installation-L4spreadsheet.rst  developers-installation-googlesheets.rst  developers-installation-webtool.rst  developers-security.rst  early-beta.rst  expert-system-webapp.rst  input-output.rst  input.rst  interactive-webform.rst  links-advanced-setup-instructions.rst  links-backend.rst  links-developers-setup-instructions.rst  links-examples.rst  links-first-steps.rst  links-law-and-computer-science.rst  links-returning-users.rst  output.rst  quickstart-installation.rst  quickstart-tour-of-L4.rst  quickstart-why-use-L4.rst  returning-L4-and-law.rst  returning-L4-keywords.rst  returning-cheatsheet.rst  returning-common-expressions.rst  returning-computational-law.rst  returning-conceptual-faq.rst  returning-examples-constit-l4.rst  returning-examples-contract-automaton.rst  returning-examples-deontic-and-temporal-logic.rst  (+22 more)
docs2023/: output.rst  todo.rst
sphinxawesome_theme/: __init__.py  breadcrumbs.html  docsearch.py  footer.html  header.html  highlighting.py  html_translator.py  (+14 more)
(+7 files in other folders)
