[tool.poetry]
name = "documentation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sphinx = "5.3.0"
sphinx-design = "0.3.0"
sphinxawesome-theme = "3.3.7"
sphinxcontrib-svg2pdfconverter = "1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"